--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,9 +12,15 @@
   <div class="w-64 bg-white p-4 shadow-md">
     <h2 class="text-lg font-bold mb-4">My Notion</h2>
     <ul>
-      <li class="py-2 px-3 hover:bg-gray-200 rounded cursor-pointer">Home</li>
-      <li class="py-2 px-3 hover:bg-gray-200 rounded cursor-pointer">Tasks</li>
-      <li class="py-2 px-3 hover:bg-gray-200 rounded cursor-pointer">Notes</li>
+      <li class="py-2 px-3 hover:bg-gray-200 rounded cursor-pointer">
+        <a href="/home" class="block w-full h-full">Home</a>
+      </li>
+      <li class="py-2 px-3 hover:bg-gray-200 rounded cursor-pointer">
+        <a href="task.html" class="block w-full h-full">Tasks</a>
+      </li>
+      <li class="py-2 px-3 hover:bg-gray-200 rounded cursor-pointer">
+        <a href="noteCorrection.html" class="block w-full h-full">Notes</a>
+      </li>
     </ul>
   </div>
 
