--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -16,12 +16,12 @@
                 <a href="/home" class="block w-full h-full">Home</a>
             </li>
             <li class="py-2 px-3 hover:bg-gray-200 rounded cursor-pointer relative" onmouseover="showAddButton('noteAddBtn')" onmouseout="hideAddButton('noteAddBtn')">
-                <a href="noteCorrection.html" class="block w-full h-full">Notes</a>
+                <a href="/note" class="block w-full h-full">Notes</a>
                 <!-- Notes 항목에 + 버튼 추가 -->
                 <button id="noteAddBtn" class="absolute top-1 right-1 bg-blue-500 text-white p-1 rounded-full hidden" onclick="showNoteInput()">+</button>
             </li>
             <li class="py-2 px-3 hover:bg-gray-200 rounded cursor-pointer relative" onmouseover="showAddButton('taskAddBtn')" onmouseout="hideAddButton('taskAddBtn')">
-                <a href="taskAdd.html" class="block w-full h-full">Tasks</a>
+                <a href="/task" class="block w-full h-full">Tasks</a>
                 <!-- Tasks 항목에 + 버튼 추가 -->
                 <button id="taskAddBtn" class="absolute top-1 right-1 bg-blue-500 text-white p-1 rounded-full hidden" onclick="showTaskInput()">+</button>
             </li>
