노트 작성 시 DB 저장 기능 + 로그인 기능 만들고 있는 중

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
     <button onclick="window.location.href='/login'" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">로그인</button>
 
     <!-- 회원가입 버튼 -->
-    <button onclick="window.location.href='/signUp'" class="px-4 py-2 bg-gray-300 text-black rounded hover:bg-gray-400">회원가입</button>
+    <button onclick="window.location.href='/signup'" class="px-4 py-2 bg-gray-300 text-black rounded hover:bg-gray-400">회원가입</button>
   </div>
 </div>
 
