🚨DB 에러 고치는 중...

--- a/src/main/resources/templates/noteAdd.html
+++ b/src/main/resources/templates/noteAdd.html
@@ -18,7 +18,7 @@
       <li class="py-2 px-3 hover:bg-gray-200 rounded cursor-pointer relative" onmouseover="showAddButton('noteAddBtn')" onmouseout="hideAddButton('noteAddBtn')">
         <a href="/note" class="block w-full h-full">Notes</a>
         <!-- Notes 항목에 + 버튼 추가 -->
-        <button id="noteAddBtn" class="absolute top-1 right-1 bg-blue-500 text-white p-1 rounded-full hidden" onclick="showNoteInput()">+</button>
+        <button id="noteAddBtn" class="absolute top-1 right-1 bg-blue-500 text-white p-1 rounded-full hidden" onclick="location.href='/note/create'">+</button>
       </li>
       <li class="py-2 px-3 hover:bg-gray-200 rounded cursor-pointer relative" onmouseover="showAddButton('taskAddBtn')" onmouseout="hideAddButton('taskAddBtn')">
         <a href="/task" class="block w-full h-full">Tasks</a>
